--- a/html/questions.html
+++ b/html/questions.html
@@ -17,7 +17,7 @@
     <nav>
         <div class="main-block">
             <h1>
-                <a href="index.html" class="logo"><img src="../img/進階版logo.jpg" alt=""></a>
+                <a href="index.html" class="logo"><img src="../img/logo.png" alt=""></a>
             </h1>
             <ul>
                 <li><a href="about.html">關於我們</a></li>
