於index.html新增wrapper.更動nav位置讓導覽列置中

--- a/html/product.html
+++ b/html/product.html
@@ -12,174 +12,176 @@
 </head>
 
 <body>
+    <div class="wrapper">
+        <!--------nav-------------->
 
-    <!--------nav-------------->
-    <nav>
         <div class="main-block">
-            <h1>
-                <a href="index.html" class="logo"><img src="../img/logo.png" alt=""></a>
-            </h1>
-            <ul>
-                <li><a href="about.html">關於我們</a></li>
-                <li><a href="product.html">產品</a></li>
-                <li><a href="giftbox.html">禮盒</a></li>
-                <li><a href="questions.html">常見問題</a></li>
-                <li><a href="contactus.html">聯絡我們</a></li>
-                <li><a href="login_out.html">註冊/登入</a></li>
-            </ul>
-        </div>
-    </nav>
-
-    <!-- product -->
-    <div class="main-block product-pg">
-        <h3>產品</h3>
-
-        <!-- 點心 -->
-        <div class="des1">
-            <h2>點心</h2>
-            <ul>
-                <li>
-                    <img src="../img/almondTuiles 2.png" alt="">
-                    <p>產品: 杏仁薄片<br>
-                        詳細資訊: 每片餅乾的塑形為手工製作，故形狀部份不工整<br>
-                        售價: $230元<br>
-                        保存期限: 常溫14天
-                    </p>
-                </li>
-                <li>
-                    <img src="../img/SnowQ.jpg" alt="">
-                    <p>產品 : 雪Q餅<br>
-                        口味: 花生、蔓越莓、可可<br>
-                        詳細資訊: 甜的棉花糖搭配鹹的餅乾，<br>
-                        再搭配微酸的蔓越莓，讓餅充滿層次~<br>
-                        售價: (蔓越莓) 盒裝$160.袋裝140<br>
-                        (花生) 盒裝$160.袋裝$140<br>
-                        (可可) 盒裝$150.袋裝$130<br>
-                        保存期限: 常溫20天
-                    </p>
-                </li>
-                <li>
-                    <img src="../img/mohcibread.png" alt="">
-                    <p>產品名稱: 麻糬麵包<br>
-                        詳細資訊: 一顆顆小小的好入口，外酥內Q的口感，絕配~<br>
-                        售價: $55元<br>
-                        保存期限: 常溫3天/冷藏5天
-                    </p>
-                </li>
-
-            </ul>
+            <nav>
+                <h1>
+                    <a href="index.html" class="logo"><img src="../img/logo.png" alt=""></a>
+                </h1>
+                <ul>
+                    <li><a href="about.html">關於我們</a></li>
+                    <li><a href="product.html">產品</a></li>
+                    <li><a href="giftbox.html">禮盒</a></li>
+                    <li><a href="questions.html">常見問題</a></li>
+                    <li><a href="contactus.html">聯絡我們</a></li>
+                    <li><a href="login_out.html">註冊/登入</a></li>
+                </ul>
+            </nav>
         </div>
 
-        <div class="des2">
-            <ul>
-                <li>
-                    <img src="../img/brownie.jpg" alt="">
-                    <p>產品名稱: 布朗尼<br>
-                        詳細資訊: 介於餅乾與蛋糕間的口感，<br>
-                        即使是巧克力卻甜而不膩<br>
-                        售價: $160<br>
-                        保存期限: 室溫3天.冷藏5天
-                    </p>
-                </li>
-                <li>
-                    <img src="../img/originalcookie.jpg" alt="">
-                    <p>產品名稱: 原味曲奇餅乾<br>
-                        詳細資訊: 酥脆而不油膩，每片純手工擠花製成<br>
-                        售價: 罐裝$110.袋裝$90<br>
-                        保存期限: 常溫14天
-                    </p>
-                </li>
-                <li>
-                    <a href="">
-                        <!-- <img src="../img/matchacookie2.jpg" alt=""> -->
-                        <p>產品名稱: 抹茶、可可曲奇餅乾<br>
-                            詳細資訊: 酥脆而不油膩，每片純手工擠花製成<br>
-                            售價: 罐裝$120.袋裝$100<br>
+
+        <!-- product -->
+        <div class="main-block product-pg">
+            <h3>產品</h3>
+
+            <!-- 點心 -->
+            <div class="des1">
+                <h2>點心</h2>
+                <ul>
+                    <li>
+                        <img src="../img/almondTuiles 2.png" alt="">
+                        <p>產品: 杏仁薄片<br>
+                            詳細資訊: 每片餅乾的塑形為手工製作，故形狀部份不工整<br>
+                            售價: $230元<br>
                             保存期限: 常溫14天
                         </p>
-                    </a>
-                </li>
-            </ul>
-        </div>
-
-        <!-- 蛋糕 -->
-
-        <div class="cake">
-            <h2>蛋糕</h2>
-            <ul>
-                <li>
-                    <img src="../img/blueberrycheesecake 1.jpg" alt="">
-                    <p>產品名稱: 藍莓起司蛋糕<br>
-                        詳細資訊: 底部是Oreo.中間是原味.上層為藍莓，冷凍取出退冰約10分鐘就是冰淇淋的口感<br>
-                        售價: $600(6吋)<br>
-                        保存期限: 冷凍7天.冷藏3天</p>
-                </li>
-                <li>
-                    <img src="../img/millecrepecake 1.jpg" alt="">
-                    <p>產品名稱: 原味千層蛋糕<br>
-                        詳細資訊: 此商品含牛奶及鮮奶油成份<br>
-                        如有需做微客製化當生日 蛋糕，可另外討論~ (ex:蛋糕上放生日.名字...)<br>
-                        售價: $580(6吋)<br>
-                        保存期限:冷藏7天</p>
-                </li>
-                <li>
-                    <a href="">
-                        <!-- <img src="../img/chocolatecake 1.jpg" alt=""> -->
-                        <p class="chocake">產品名稱: 可可、抹茶千層蛋糕<br>
-                            詳細資訊: 此商品含牛奶及鮮奶油成份<br>
-                            如需微客製化當生日蛋糕，可另外討論~(ex:蛋糕上放生日.名字...)<br>
-                            售價: $650(6吋)<br>
-                            保存期限: 冷藏7天</p>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </div>
-
-    <!-- timeline -->
-    <div class="main-block wrap">
-        <h2>季節限定</h2>
-        <ul class="timeline">
-            <li>
-                <a href="#">
-                    <p>1-3月<br>草莓甜點</p>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <p>5-9月<br>芒果甜點</p>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <p>9-12月<br>奇異果甜點</p>
-                </a>
-            </li>
-        </ul>
-    </div>
-
-    <!-- 頁尾 -->
-    <footer>
-        <div class="main-block">
-
-            <div class="follow">
-                <h3>追蹤我們</h3>
-                <ul>
-                    <li><a href="https://m.facebook.com/HARNs-Sweets-100358675454637/"><i
-                                class="fab fa-facebook"></i></a>
                     </li>
-                    <li><a href="https://www.instagram.com/harns_sweets/"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=094yxqxe"><i
-                                class="fab fa-line"></i></a></li>
+                    <li>
+                        <img src="../img/SnowQ.jpg" alt="">
+                        <p>產品 : 雪Q餅<br>
+                            口味: 花生、蔓越莓、可可<br>
+                            詳細資訊: 甜的棉花糖搭配鹹的餅乾，<br>
+                            再搭配微酸的蔓越莓，讓餅充滿層次~<br>
+                            售價: (蔓越莓) 盒裝$160.袋裝140<br>
+                            (花生) 盒裝$160.袋裝$140<br>
+                            (可可) 盒裝$150.袋裝$130<br>
+                            保存期限: 常溫20天
+                        </p>
+                    </li>
+                    <li>
+                        <img src="../img/mohcibread.png" alt="">
+                        <p>產品名稱: 麻糬麵包<br>
+                            詳細資訊: 一顆顆小小的好入口，外酥內Q的口感，絕配~<br>
+                            售價: $55元<br>
+                            保存期限: 常溫3天/冷藏5天
+                        </p>
+                    </li>
+
                 </ul>
             </div>
-            <div class="cop">
-                <p>本網站為緯育TibaMe前端設計工程師班第74期學員專題作品，本平台僅供學習、展示之用。<br>參考資源:法朋</p>
+
+            <div class="des2">
+                <ul>
+                    <li>
+                        <img src="../img/brownie.jpg" alt="">
+                        <p>產品名稱: 布朗尼<br>
+                            詳細資訊: 介於餅乾與蛋糕間的口感，<br>
+                            即使是巧克力卻甜而不膩<br>
+                            售價: $160<br>
+                            保存期限: 室溫3天.冷藏5天
+                        </p>
+                    </li>
+                    <li>
+                        <img src="../img/originalcookie.jpg" alt="">
+                        <p>產品名稱: 原味曲奇餅乾<br>
+                            詳細資訊: 酥脆而不油膩，每片純手工擠花製成<br>
+                            售價: 罐裝$110.袋裝$90<br>
+                            保存期限: 常溫14天
+                        </p>
+                    </li>
+                    <li>
+                        <a href="">
+                            <!-- <img src="../img/matchacookie2.jpg" alt=""> -->
+                            <p>產品名稱: 抹茶、可可曲奇餅乾<br>
+                                詳細資訊: 酥脆而不油膩，每片純手工擠花製成<br>
+                                售價: 罐裝$120.袋裝$100<br>
+                                保存期限: 常溫14天
+                            </p>
+                        </a>
+                    </li>
+                </ul>
             </div>
 
-        </div>
-    </footer>
+            <!-- 蛋糕 -->
 
+            <div class="cake">
+                <h2>蛋糕</h2>
+                <ul>
+                    <li>
+                        <img src="../img/blueberrycheesecake 1.jpg" alt="">
+                        <p>產品名稱: 藍莓起司蛋糕<br>
+                            詳細資訊: 底部是Oreo.中間是原味.上層為藍莓，冷凍取出退冰約10分鐘就是冰淇淋的口感<br>
+                            售價: $600(6吋)<br>
+                            保存期限: 冷凍7天.冷藏3天</p>
+                    </li>
+                    <li>
+                        <img src="../img/millecrepecake 1.jpg" alt="">
+                        <p>產品名稱: 原味千層蛋糕<br>
+                            詳細資訊: 此商品含牛奶及鮮奶油成份<br>
+                            如有需做微客製化當生日 蛋糕，可另外討論~ (ex:蛋糕上放生日.名字...)<br>
+                            售價: $580(6吋)<br>
+                            保存期限:冷藏7天</p>
+                    </li>
+                    <li>
+                        <a href="">
+                            <!-- <img src="../img/chocolatecake 1.jpg" alt=""> -->
+                            <p class="chocake">產品名稱: 可可、抹茶千層蛋糕<br>
+                                詳細資訊: 此商品含牛奶及鮮奶油成份<br>
+                                如需微客製化當生日蛋糕，可另外討論~(ex:蛋糕上放生日.名字...)<br>
+                                售價: $650(6吋)<br>
+                                保存期限: 冷藏7天</p>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+
+        <!-- timeline -->
+        <div class="main-block wrap">
+            <h2>季節限定</h2>
+            <ul class="timeline">
+                <li>
+                    <a href="#">
+                        <p>1-3月<br>草莓甜點</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <p>5-9月<br>芒果甜點</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <p>9-12月<br>奇異果甜點</p>
+                    </a>
+                </li>
+            </ul>
+        </div>
+
+        <!-- 頁尾 -->
+        <footer>
+            <div class="main-block">
+
+                <div class="follow">
+                    <h3>追蹤我們</h3>
+                    <ul>
+                        <li><a href="https://m.facebook.com/HARNs-Sweets-100358675454637/"><i
+                                    class="fab fa-facebook"></i></a>
+                        </li>
+                        <li><a href="https://www.instagram.com/harns_sweets/"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=094yxqxe"><i
+                                    class="fab fa-line"></i></a></li>
+                    </ul>
+                </div>
+                <div class="cop">
+                    <p>本網站為緯育TibaMe前端設計工程師班第74期學員專題作品，本平台僅供學習、展示之用。<br>參考資源:法朋</p>
+                </div>
+
+            </div>
+        </footer>
+    </div>
 </body>
 
 </html>
