--- a/html/giftbox.html
+++ b/html/giftbox.html
@@ -12,66 +12,68 @@
 </head>
 
 <body>
+    <div class="wrapper">
+        <!--------nav-------------->
 
-    <!--------nav-------------->
-    <nav>
         <div class="main-block">
-            <h1>
-                <a href="index.html" class="logo"><img src="../img/logo.png" alt=""></a>
-            </h1>
-            <ul>
-                <li><a href="about.html">關於我們</a></li>
-                <li><a href="product.html">產品</a></li>
-                <li><a href="giftbox.html">禮盒</a></li>
-                <li><a href="questions.html">常見問題</a></li>
-                <li><a href="contactus.html">聯絡我們</a></li>
-                <li><a href="login_out.html">註冊/登入</a></li>
-            </ul>
-        </div>
-    </nav>
-
-    <!-- main -->
-    <div class="main-block giftbox-pg">
-        <h3>禮盒</h3>
-        <div class="gft">
-            <div class="pics5">
-                <img src="../img/moonfestivalgiftbox2.png" alt="">
-            </div>
-            <div class="txt6">
-                <h2>中秋節禮盒</h2>
+            <nav>
+                <h1>
+                    <a href="index.html" class="logo"><img src="../img/logo.png" alt=""></a>
+                </h1>
                 <ul>
-                    <li>內容物 : 綠豆椪、蛋黃酥</li>
-                    <li>綜合(各三顆) : $250元</li>
-                    <li>蛋黃酥(六顆) : $280元</li>
-                    <li>綠豆椪(六顆) : $230元</li>
-                    <li>保存期限 : 常溫5天，冷藏可延長保存期限</li>
+                    <li><a href="about.html">關於我們</a></li>
+                    <li><a href="product.html">產品</a></li>
+                    <li><a href="giftbox.html">禮盒</a></li>
+                    <li><a href="questions.html">常見問題</a></li>
+                    <li><a href="contactus.html">聯絡我們</a></li>
+                    <li><a href="login_out.html">註冊/登入</a></li>
                 </ul>
+            </nav>
+        </div>
+
+
+        <!-- main -->
+        <div class="main-block giftbox-pg">
+            <h3>禮盒</h3>
+            <div class="gft">
+                <div class="pics5">
+                    <img src="../img/moonfestivalgiftbox2.png" alt="">
+                </div>
+                <div class="txt6">
+                    <h2>中秋節禮盒</h2>
+                    <ul>
+                        <li>內容物 : 綠豆椪、蛋黃酥</li>
+                        <li>綜合(各三顆) : $250元</li>
+                        <li>蛋黃酥(六顆) : $280元</li>
+                        <li>綠豆椪(六顆) : $230元</li>
+                        <li>保存期限 : 常溫5天，冷藏可延長保存期限</li>
+                    </ul>
+                </div>
             </div>
         </div>
+
+        <!-- 頁尾 -->
+        <footer>
+            <div class="main-block">
+
+                <div class="follow">
+                    <h3>追蹤我們</h3>
+                    <ul>
+                        <li><a href="https://m.facebook.com/HARNs-Sweets-100358675454637/"><i
+                                    class="fab fa-facebook"></i></a>
+                        </li>
+                        <li><a href="https://www.instagram.com/harns_sweets/"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=094yxqxe"><i
+                                    class="fab fa-line"></i></a></li>
+                    </ul>
+                </div>
+                <div class="cop">
+                    <p>本網站為緯育TibaMe前端設計工程師班第74期學員專題作品，本平台僅供學習、展示之用。<br>參考資源:法朋</p>
+                </div>
+
+            </div>
+        </footer>
     </div>
-
-    <!-- 頁尾 -->
-    <footer>
-        <div class="main-block">
-
-            <div class="follow">
-                <h3>追蹤我們</h3>
-                <ul>
-                    <li><a href="https://m.facebook.com/HARNs-Sweets-100358675454637/"><i
-                                class="fab fa-facebook"></i></a>
-                    </li>
-                    <li><a href="https://www.instagram.com/harns_sweets/"><i class="fab fa-instagram"></i></a></li>
-                    <li><a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=094yxqxe"><i
-                                class="fab fa-line"></i></a></li>
-                </ul>
-            </div>
-            <div class="cop">
-                <p>本網站為緯育TibaMe前端設計工程師班第74期學員專題作品，本平台僅供學習、展示之用。<br>參考資源:法朋</p>
-            </div>
-
-        </div>
-    </footer>
-
 </body>
 
 </html>
