--- a/html/contactus.html
+++ b/html/contactus.html
@@ -8,111 +8,94 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="../css/contactus.css">
-    <title>Harn's SWEET</title>
+    <title>聯絡我們</title>
 </head>
 
 <body>
+
+    <!--------nav-------------->
+    <header>
+        <nav>
+            <h1>
+                <a href="index.html" class="logo"><img src="../img/logo.png" alt=""></a>
+            </h1>
+            <ul>
+                <li><a href="about.html">關於我們</a></li>
+                <li><a href="product.html">產品</a></li>
+                <li><a href="giftbox.html">禮盒</a></li>
+                <li><a href="questions.html">常見問題</a></li>
+                <li><a href="contactus.html">聯絡我們</a></li>
+                <li><a href="login_out.html">註冊/登入</a></li>
+            </ul>
+        </nav>
+    </header>
+
     <div class="wrapper">
-        <!--------nav-------------->
+        <!------------------ signup ------------------->
 
-        <div class="main-block">
-            <nav>
-                <h1>
-                    <a href="index.html" class="logo"><img src="../img/logo.png" alt=""></a>
-                </h1>
-                <ul>
-                    <li><a href="about.html">關於我們</a></li>
-                    <li><a href="product.html">產品</a></li>
-                    <li><a href="giftbox.html">禮盒</a></li>
-                    <li><a href="questions.html">常見問題</a></li>
-                    <li><a href="contactus.html">聯絡我們</a></li>
-                    <li><a href="login_out.html">註冊/登入</a></li>
-                </ul>
-            </nav>
-        </div>
+        <h3 class="cnt">聯絡我們</h3>
 
+        <ul class="form">
+            <li>
+                <p>姓名:</p>
+                <input class="name" type="text" />
+            </li>
+            <li>
+                <p>電話:</p>
+                <input class="phone" type="text" />
+            </li>
+            <li>
+                <p>e-mail:</p>
+                <input class="email" type="text" />
+            </li>
+            <li>
+                <p>需客製化之內容:</p>
+                <input class="content" type="text" />
+            </li>
 
-        <!-- signup -->
-        <div class="main-block contactus-pg">
-            <h3>聯絡我們</h3>
-            <div class="form">
+            <div id="img_block">
 
-                <ul>
-
-
-                    <li>
-                        <p>姓名:</p>
-                        <input class="name" type="text" />
-                    </li>
-                    <li>
-                        <p>電話:</p>
-                        <input class="phone" type="text" />
-                    </li>
-                    <li>
-                        <p>e-mail:</p>
-                        <input class="email" type="text" />
-                    </li>
-
-
-                    <li>
-                        <p>需客製化之內容:</p>
-                        <input class="content" type="text" />
-                    </li>
-
-                    <div id="img_block">
-
-                        需客製化之圖片:
-                        <span id="file_name"></span><br>
-
-                    </div>
-                    <input type="file" id="file_input" />
-                    <!-- <button type="button" id="choose_file">選取檔案</button> -->
-
-                    <li>
-                        <p>希望與您聯繫之方式:</p>
-                        <input class="email2" type="radio" name="xxx" />
-                        <span>E-mail</span>
-                        <input class="phone2" type="radio" name="xxx" />
-                        <span>電話</span>
-                    </li>
-
-                    <li>
-                        <input class="submit" type="submit" value="提交表單" />
-                    </li>
-
-                </ul>
+                需客製化之圖片:
+                <span id="file_name"></span><br>
 
             </div>
+            <input type="file" id="file_input" />
+            <!-- <button type="button" id="choose_file">選取檔案</button> -->
 
+            <li>
+                <p>希望與您聯繫之方式:</p>
+                <input class="email2" type="radio" name="xxx" />
+                <span>E-mail</span>
+                <input class="phone2" type="radio" name="xxx" />
+                <span>電話</span>
+            </li>
 
+            <li>
+                <input class="submit" type="submit" value="提交表單" />
+            </li>
+        </ul>
 
-
-        </div>
-
-        <!-- 頁尾 -->
-        <footer>
-            <div class="main-block">
-
-                <div class="follow">
-                    <h3>追蹤我們</h3>
-                    <ul>
-                        <li><a href="https://m.facebook.com/HARNs-Sweets-100358675454637/"><i
-                                    class="fab fa-facebook"></i></a>
-                        </li>
-                        <li><a href="https://www.instagram.com/harns_sweets/"><i class="fab fa-instagram"></i></a>
-                        </li>
-                        <li><a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=094yxqxe"><i
-                                    class="fab fa-line"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="cop">
-                    <p>本網站為緯育TibaMe前端設計工程師班第74期學員專題作品，本平台僅供學習、展示之用。<br>參考資源:法朋</p>
-                </div>
-
-            </div>
-        </footer>
     </div>
+
+    <!-- 頁尾 -->
+    <footer>
+
+        <div class="follow">
+            <h3>追蹤我們</h3>
+            <ul>
+                <li><a href="https://m.facebook.com/HARNs-Sweets-100358675454637/"><i class="fab fa-facebook"></i></a>
+                </li>
+                <li><a href="https://www.instagram.com/harns_sweets/"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=094yxqxe"><i
+                            class="fab fa-line"></i></a></li>
+            </ul>
+        </div>
+        <div class="cop">
+            <p>本網站為緯育TibaMe前端設計工程師班第74期學員專題作品，本平台僅供學習、展示之用。<br>參考資源:法朋</p>
+        </div>
+
+    </footer>
+
 </body>
 
 </html>
