--- a/html/questions.html
+++ b/html/questions.html
@@ -8,33 +8,32 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <link rel="stylesheet" href="../css/questions.css">
-    <title>Harn's SWEET</title>
+    <title>常見問題</title>
 </head>
 
 <body>
-    <div class="wrapper">
-        <!--------nav-------------->
+    
+    <!--------nav-------------->
+    <header>    
+        <nav>
+            <h1>
+                <a href="index.html" class="logo"><img src="../img/logo.png" alt=""></a>
+            </h1>
+            <ul>
+                <li><a href="about.html">關於我們</a></li>
+                <li><a href="product.html">產品</a></li>
+                <li><a href="giftbox.html">禮盒</a></li>
+                <li><a href="questions.html">常見問題</a></li>
+                <li><a href="contactus.html">聯絡我們</a></li>
+                <li><a href="login_out.html">註冊/登入</a></li>
+            </ul>
+        </nav>
+    </header>
 
-        <div class="main-block">
-            <nav>
-                <h1>
-                    <a href="index.html" class="logo"><img src="../img/logo.png" alt=""></a>
-                </h1>
-                <ul>
-                    <li><a href="about.html">關於我們</a></li>
-                    <li><a href="product.html">產品</a></li>
-                    <li><a href="giftbox.html">禮盒</a></li>
-                    <li><a href="questions.html">常見問題</a></li>
-                    <li><a href="contactus.html">聯絡我們</a></li>
-                    <li><a href="login_out.html">註冊/登入</a></li>
-                </ul>
-            </nav>
-        </div>
-
-
+    <div class="wrapper">    
         <!-- questions -->
-        <div class="main-block questions-pg">
-            <h3>常見問題</h3>
+        
+            <h3 class="que">常見問題</h3>
 
             <div class="qa">
                 <p>若有任何問題請參考以下資訊</p>
@@ -43,7 +42,7 @@
                     title="" type="button">訂購方式</a>
                 <span class="line"></span>
                 <div id="hide" style="display: none;">
-                    目前可透過line或facebook messenger訊息訂購，將會有專人回覆，謝謝~
+                    目前可透過line或facebook messenger訊息訂購，<br>將會有專人回覆，謝謝~
                 </div>
                 <a class="q2" href="#hide2"
                     onclick="if(document.getElementById('hide2') .style.display=='none') {document.getElementById('hide2') .style.display=''}else{document.getElementById('hide2') .style.display='none'}"
@@ -57,37 +56,29 @@
                 <div id="hide3" style="display: none;">
                     凡是於特殊節慶無法指定，其餘時段到貨日以黑貓宅急便為主~
                 </div>
-
-
-
-
             </div>
+    </div>
+
+    <!-- 頁尾 -->
+    <footer>
+
+        <div class="follow">
+            <h3>追蹤我們</h3>
+            <ul>
+                <li><a href="https://m.facebook.com/HARNs-Sweets-100358675454637/"><i class="fab fa-facebook"></i></a>
+                </li>
+                <li><a href="https://www.instagram.com/harns_sweets/"><i class="fab fa-instagram"></i></a></li>
+                <li><a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=094yxqxe"><i
+                            class="fab fa-line"></i></a></li>
+            </ul>
+        </div>
+        <div class="cop">
+            <p>本網站為緯育TibaMe前端設計工程師班第74期學員專題作品，本平台僅供學習、展示之用。<br>參考資源:法朋</p>
         </div>
 
-        <!-- 頁尾 -->
-        <footer>
-            <div class="main-block">
+    </footer>
 
-                <div class="follow">
-                    <h3>追蹤我們</h3>
-                    <ul>
-                        <li><a href="https://m.facebook.com/HARNs-Sweets-100358675454637/"><i
-                                    class="fab fa-facebook"></i></a>
-                        </li>
-                        <li><a href="https://www.instagram.com/harns_sweets/"><i class="fab fa-instagram"></i></a>
-                        </li>
-                        <li><a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=094yxqxe"><i
-                                    class="fab fa-line"></i></a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="cop">
-                    <p>本網站為緯育TibaMe前端設計工程師班第74期學員專題作品，本平台僅供學習、展示之用。<br>參考資源:法朋</p>
-                </div>
 
-            </div>
-        </footer>
-    </div>
 </body>
 
 </html>
