讓頁尾連結開新分頁

--- a/html/product.html
+++ b/html/product.html
@@ -168,21 +168,23 @@
     <!-- 頁尾 -->
     <footer>
 
-
         <div class="follow">
             <h3>追蹤我們</h3>
             <ul>
-                <li><a href="https://m.facebook.com/HARNs-Sweets-100358675454637/"><i class="fab fa-facebook"></i></a>
+                <li>
+                    <a href="https://m.facebook.com/HARNs-Sweets-100358675454637/" target="_blank"><i class="fab fa-facebook"></i></a>
                 </li>
-                <li><a href="https://www.instagram.com/harns_sweets/"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=094yxqxe"><i
-                            class="fab fa-line"></i></a></li>
+                <li>
+                    <a href="https://www.instagram.com/harns_sweets/" target="_blank"><i class="fab fa-instagram"></i></a>
+                </li>
+                <li>
+                    <a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=094yxqxe" target="_blank"><i class="fab fa-line"></i></a>
+                </li>
             </ul>
         </div>
         <div class="cop">
             <p>本網站為緯育TibaMe前端設計工程師班第74期學員專題作品，本平台僅供學習、展示之用。<br>參考資源:法朋</p>
         </div>
-
 
     </footer>
 
