--- a/html/questions.html
+++ b/html/questions.html
@@ -65,11 +65,15 @@
         <div class="follow">
             <h3>追蹤我們</h3>
             <ul>
-                <li><a href="https://m.facebook.com/HARNs-Sweets-100358675454637/"><i class="fab fa-facebook"></i></a>
+                <li>
+                    <a href="https://m.facebook.com/HARNs-Sweets-100358675454637/" target="_blank"><i class="fab fa-facebook"></i></a>
                 </li>
-                <li><a href="https://www.instagram.com/harns_sweets/"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=094yxqxe"><i
-                            class="fab fa-line"></i></a></li>
+                <li>
+                    <a href="https://www.instagram.com/harns_sweets/" target="_blank"><i class="fab fa-instagram"></i></a>
+                </li>
+                <li>
+                    <a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=094yxqxe" target="_blank"><i class="fab fa-line"></i></a>
+                </li>
             </ul>
         </div>
         <div class="cop">
