--- a/html/about.html
+++ b/html/about.html
@@ -4,23 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/about.css">
     <title>關於我們</title>
 </head>
 
 <body>
-    
-        <!--------nav-------------->
+
+    <!--------nav-------------->
 
     <header>
         <nav>
             <h1>
-                <a href="index.html" class="logo"><img src="../img/logo.png" alt=""></a>
+                <a href="index.html" class="logo"><img src="../img/logo.svg" alt=""></a>
             </h1>
-            <ul>
+            <ul class="menu">
                 <li><a href="about.html">關於我們</a></li>
                 <li><a href="product.html">產品</a></li>
                 <li><a href="giftbox.html">禮盒</a></li>
@@ -28,13 +27,30 @@
                 <li><a href="contactus.html">聯絡我們</a></li>
                 <li><a href="login_out.html">註冊/登入</a></li>
             </ul>
+            <button type="button" class="btn_switch">
+                <span class="-hr -top"></span>
+                <span class="-hr -middle"></span>
+                <span class="-hr -bottom"></span>
+            </button>
         </nav>
-    </header>    
+    </header>
 
-    <div class="wrapper"> 
+    <div class="wrapper">
+        <!----------- breadcrumb ------------>
+
+        <ol class="breadcrumb">
+            <li>
+                <a href="index.html"><i class="fas fa-home"></i> 首頁</a>
+            </li>
+
+            <li>
+                <p>關於我們</p>
+            </li>
+        </ol>
+
+
         <!-- main -->
-
-        <h3 class="main">關於我們</h3>
+        <!-- <h3 class="main">關於我們</h3> -->
         <div class="igr">
             <div class="txt4">
                 <h2>食材</h2>
@@ -45,15 +61,15 @@
             </div>
         </div>
         <div class="fre">
-            <div class="txt5">
+            <div class="txt5 js-slide js-slide-r js-active">
                 <h2>新鮮</h2>
                 <p>製作甜點的食材皆精挑細選，以天然為原則，<br>水果部份皆有產銷履歷，讓您吃得安心又健康，<br>接單後才會開始挑選食材，絕不囤貨。</p>
             </div>
-            <div class="pics4">
+            <div class="pics4 js-slide js-slide-l js-active">
                 <img src="../img/ingredients3.png" alt="">
             </div>
         </div>
-        
+
     </div>
 
     <!-- 頁尾 -->
@@ -63,13 +79,16 @@
             <h3>追蹤我們</h3>
             <ul>
                 <li>
-                    <a href="https://m.facebook.com/HARNs-Sweets-100358675454637/" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://m.facebook.com/HARNs-Sweets-100358675454637/" target="_blank"><i
+                            class="fab fa-facebook"></i></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/harns_sweets/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/harns_sweets/" target="_blank"><i
+                            class="fab fa-instagram"></i></a>
                 </li>
                 <li>
-                    <a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=094yxqxe" target="_blank"><i class="fab fa-line"></i></a>
+                    <a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=094yxqxe" target="_blank"><i
+                            class="fab fa-line"></i></a>
                 </li>
             </ul>
         </div>
@@ -78,7 +97,14 @@
         </div>
 
     </footer>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    <script src="../js/base.js"></script>
+    <script type="text/javascript" src="vanilla-tilt.js"></script>
+    <script src=”https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js”></script>
 </body>
 
 </html>
