--- a/html/contactus.html
+++ b/html/contactus.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css"
+        integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/contactus.css">
     <title>聯絡我們</title>
 </head>
@@ -17,9 +17,9 @@
     <header>
         <nav>
             <h1>
-                <a href="index.html" class="logo"><img src="../img/logo.png" alt=""></a>
+                <a href="index.html" class="logo"><img src="../img/logo.svg" alt=""></a>
             </h1>
-            <ul>
+            <ul class="menu">
                 <li><a href="about.html">關於我們</a></li>
                 <li><a href="product.html">產品</a></li>
                 <li><a href="giftbox.html">禮盒</a></li>
@@ -27,53 +27,71 @@
                 <li><a href="contactus.html">聯絡我們</a></li>
                 <li><a href="login_out.html">註冊/登入</a></li>
             </ul>
+            <button type="button" class="btn_switch">
+                <span class="-hr -top"></span>
+                <span class="-hr -middle"></span>
+                <span class="-hr -bottom"></span>
+            </button>
         </nav>
     </header>
 
     <div class="wrapper">
+
+        <!----------- breadcrumb ------------>
+
+        <ol class="breadcrumb">
+            <li>
+                <a href="index.html"><i class="fas fa-home"></i> 首頁</a>
+            </li>
+
+            <li>
+                <p>聯絡我們</p>
+            </li>
+        </ol>
+
         <!------------------ signup ------------------->
 
-        <h3 class="cnt">聯絡我們</h3>
+        <form action="">
+            <ul class="form">
+                <li>
+                    <p>姓名:</p>
+                    <input class="name" type="text">
+                </li>
+                <li>
+                    <p>電話:</p>
+                    <input class="phone" type="text" placeholder="09xx-xxx-xxx">
+                </li>
+                <li>
+                    <p>e-mail:</p>
+                    <input class="email" type="email" id="email" placeholder="xxx@gmail.com">
+                </li>
+                <li>
+                    <p>需客製化之內容:</p>
+                    <input class="content" type="text">
+                </li>
 
-        <ul class="form">
-            <li>
-                <p>姓名:</p>
-                <input class="name" type="text" />
-            </li>
-            <li>
-                <p>電話:</p>
-                <input class="phone" type="text" />
-            </li>
-            <li>
-                <p>e-mail:</p>
-                <input class="email" type="text" />
-            </li>
-            <li>
-                <p>需客製化之內容:</p>
-                <input class="content" type="text" />
-            </li>
+                <div id="img_block">
 
-            <div id="img_block">
+                    需客製化之圖片:
+                    <span id="file_name"></span><br>
 
-                需客製化之圖片:
-                <span id="file_name"></span><br>
+                </div>
+                <input type="file" id="file_input" />
+                <button type="button" id="choose_file"><i class="fa-solid fa-folder-open"></i></button>
 
-            </div>
-            <input type="file" id="file_input" />
-            <!-- <button type="button" id="choose_file">選取檔案</button> -->
+                <li>
+                    <p>希望與您聯繫之方式:</p>
+                    <input class="email2" type="radio" name="xxx" />
+                    <span>E-mail</span>
+                    <input class="phone2" type="radio" name="xxx" />
+                    <span>電話</span>
+                </li>
 
-            <li>
-                <p>希望與您聯繫之方式:</p>
-                <input class="email2" type="radio" name="xxx" />
-                <span>E-mail</span>
-                <input class="phone2" type="radio" name="xxx" />
-                <span>電話</span>
-            </li>
-
-            <li>
-                <input class="submit" type="submit" value="提交表單" />
-            </li>
-        </ul>
+                <li>
+                    <input class="submit" type="submit" value="提交表單" />
+                </li>
+            </ul>
+        </form>
 
     </div>
 
@@ -84,13 +102,16 @@
             <h3>追蹤我們</h3>
             <ul>
                 <li>
-                    <a href="https://m.facebook.com/HARNs-Sweets-100358675454637/" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://m.facebook.com/HARNs-Sweets-100358675454637/" target="_blank"><i
+                            class="fab fa-facebook"></i></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/harns_sweets/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/harns_sweets/" target="_blank"><i
+                            class="fab fa-instagram"></i></a>
                 </li>
                 <li>
-                    <a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=094yxqxe" target="_blank"><i class="fab fa-line"></i></a>
+                    <a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=094yxqxe" target="_blank"><i
+                            class="fab fa-line"></i></a>
                 </li>
             </ul>
         </div>
@@ -100,6 +121,13 @@
 
     </footer>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    <script src="../js/base.js"></script>
+    <script src="../js/contactus.js"></script>
 </body>
 
 </html>
