--- a/html/giftbox.html
+++ b/html/giftbox.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/giftbox.css">
     <title>禮盒</title>
 </head>
@@ -18,9 +17,9 @@
     <header>
         <nav>
             <h1>
-                <a href="index.html" class="logo"><img src="../img/logo.png" alt=""></a>
+                <a href="index.html" class="logo"><img src="../img/logo.svg" alt=""></a>
             </h1>
-            <ul>
+            <ul class="menu">
                 <li><a href="about.html">關於我們</a></li>
                 <li><a href="product.html">產品</a></li>
                 <li><a href="giftbox.html">禮盒</a></li>
@@ -28,13 +27,29 @@
                 <li><a href="contactus.html">聯絡我們</a></li>
                 <li><a href="login_out.html">註冊/登入</a></li>
             </ul>
+            <button type="button" class="btn_switch">
+                <span class="-hr -top"></span>
+                <span class="-hr -middle"></span>
+                <span class="-hr -bottom"></span>
+            </button>
         </nav>
     </header>
 
     <div class="wrapper">
-        <!-- main -->
 
-        <h3 class="gift">禮盒</h3>
+        <!----------- breadcrumb ------------>
+
+        <ol class="breadcrumb">
+            <li>
+                <a href="index.html"><i class="fas fa-home"></i> 首頁</a>
+            </li>
+
+            <li>
+                <p>禮盒</p>
+            </li>
+        </ol>
+
+        <!-- main -->
         <div class="gft">
             <div class="pics5">
                 <img src="../img/moonfestivalgiftbox2.png" alt="">
@@ -76,6 +91,14 @@
 
     </footer>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    <script src="../js/base.js"></script>
+    <script type="text/javascript" src="vanilla-tilt.js"></script>
+    <script src=”https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js”></script>
 </body>
 
 </html>
