--- a/html/login_out.html
+++ b/html/login_out.html
@@ -5,20 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-        integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.0.0/css/all.css" integrity="sha384-3B6NwesSXE7YJlcLI9RpRqGf2p/EgVH8BgoKTaUrmKNDkHPStTQ3EyoYjCGXaOTS" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/login_out.css">
     <title>註冊/登入</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
-        <!--------nav-------------->
-    <header>    
+    <!--------nav-------------->
+    <header>
         <nav>
             <h1>
-                <a href="index.html" class="logo"><img src="../img/logo.png" alt=""></a>
+                <a href="index.html" class="logo"><img src="../img/logo.svg" alt=""></a>
             </h1>
-            <ul>
+            <ul class="menu">
                 <li><a href="about.html">關於我們</a></li>
                 <li><a href="product.html">產品</a></li>
                 <li><a href="giftbox.html">禮盒</a></li>
@@ -26,19 +26,36 @@
                 <li><a href="contactus.html">聯絡我們</a></li>
                 <li><a href="login_out.html">註冊/登入</a></li>
             </ul>
+            <button type="button" class="btn_switch">
+                <span class="-hr -top"></span>
+                <span class="-hr -middle"></span>
+                <span class="-hr -bottom"></span>
+            </button>
         </nav>
-    </header>    
+    </header>
 
-    <div class="wrapper">    
+    <div class="wrapper">
+
+        <!----------- breadcrumb ------------>
+        <ol class="breadcrumb">
+            <li>
+                <a href="index.html"><i class="fas fa-home"></i> 首頁</a>
+            </li>
+
+            <li>
+                <p>註冊/登入</p>
+            </li>
+        </ol>
+
         <!-- log in -->
-        <h3 class="bre">註冊/登入</h3>
+
         <h2 class="top">歡迎來到Harn's SWEET</h2>
         <ul class="form1">
             <h2 class="loi">會員登入</h2>
             <!-- 帳號 -->
             <li>
                 <p>帳號</p>
-                <input class="account" type="text" />
+                <input class="account" type="text" placeholder="xxx@gmail.com"/>
             </li>
             <!-- 密碼 -->
             <li>
@@ -48,8 +65,8 @@
             <!-- 送出 -->
             <li>
                 <input class="login" type="submit" value="登入" />
+                <a href="signup.html">註冊會員</a>
             </li>
-            <a href="signup.html">註冊會員</a>
         </ul>
 
     </div>
@@ -61,13 +78,16 @@
             <h3>追蹤我們</h3>
             <ul>
                 <li>
-                    <a href="https://m.facebook.com/HARNs-Sweets-100358675454637/" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://m.facebook.com/HARNs-Sweets-100358675454637/" target="_blank"><i
+                            class="fab fa-facebook"></i></a>
                 </li>
                 <li>
-                    <a href="https://www.instagram.com/harns_sweets/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/harns_sweets/" target="_blank"><i
+                            class="fab fa-instagram"></i></a>
                 </li>
                 <li>
-                    <a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=094yxqxe" target="_blank"><i class="fab fa-line"></i></a>
+                    <a href="https://liff.line.me/1645278921-kWRPP32q/?accountId=094yxqxe" target="_blank"><i
+                            class="fab fa-line"></i></a>
                 </li>
             </ul>
         </div>
@@ -76,6 +96,15 @@
         </div>
 
     </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+    <script src="../js/base.js"></script>
+    <!-- <script type="text/javascript" src="vanilla-tilt.js"></script> -->
+    <script src=”https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js”></script>
 
 </body>
 
