add go to top svg

--- a/html/about.html
+++ b/html/about.html
@@ -12,8 +12,9 @@
 
 <body>
 
-    <!--------nav-------------->
+    <button class="js-back-to-top back-to-top"><img src="../img/TOP.svg" alt=""></button>
 
+    <!--------nav-------------->
     <header>
         <nav>
             <h1>
