add 回頂部按鈕圖示 表單內容新增文字

--- a/html/contactus.html
+++ b/html/contactus.html
@@ -13,6 +13,8 @@
 
 <body>
 
+    <button class="js-back-to-top back-to-top"><img src="../img/TOP.svg" alt=""></button>
+
     <!--------nav-------------->
     <header>
         <nav>
@@ -86,7 +88,7 @@
                     <input class="phone2" type="radio" name="xxx" />
                     <span>電話</span>
                 </li>
-
+                <p>〝將於收到表單後，與您聯繫商討客製化之細節〞</p>
                 <li>
                     <input class="submit" type="submit" value="提交表單" />
                 </li>
