--- a/html/login_out.html
+++ b/html/login_out.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+
+    <button class="js-back-to-top back-to-top"><img src="../img/TOP.svg" alt=""></button>
+
     <!--------nav-------------->
     <header>
         <nav>
