--- a/html/product.html
+++ b/html/product.html
@@ -19,8 +19,8 @@
 
 <body>
 
+    <button class="js-back-to-top back-to-top"><img src="../img/TOP.svg" alt=""></button>
     <!--------nav-------------->
-
     <header>
         <nav>
             <h1>
