--- a/html/questions.html
+++ b/html/questions.html
@@ -13,6 +13,8 @@
 
 <body>
 
+    <button class="js-back-to-top back-to-top"><img src="../img/TOP.svg" alt=""></button>
+
     <!--------nav-------------->
     <header>
         <nav>
