修改表單文字間距

--- a/html/questions.html
+++ b/html/questions.html
@@ -59,7 +59,7 @@
                 title="" type="button">訂購方式</a>
             <span class="line"></span>
             <div id="hide" style="display: none;">
-                目前可透過line或facebook messenger訊息訂購，<br>將會有專人回覆，謝謝~
+                目前可透過line或facebook messenger訊息訂購，將會有專人回覆，謝謝~
             </div>
             <a class="q2" href="#hide2"
                 onclick="if(document.getElementById('hide2') .style.display=='none') {document.getElementById('hide2') .style.display=''}else{document.getElementById('hide2') .style.display='none'}"
